# backend/docs/swagger.json
@@ -1,14 +1,41 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "APS Token Management API",
-        "title": "APS Viewer API",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1",
     "paths": {
+        "/api/v1/buckets": {
+            "post": {
+                "description": "新しいAPSバケットを作成します",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "APS Bucket"
+                ],
+                "summary": "APSバケット作成",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.APSBucket"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/token": {
             "post": {
                 "description": "2-legged認証でAPSアクセストークンを取得します",
@@ -43,6 +70,29 @@
         }
     },
     "definitions": {
+        "domain.APSBucket": {
+            "type": "object",
+            "properties": {
+                "bucketKey": {
+                    "type": "string"
+                },
+                "bucketOwner": {
+                    "type": "string"
+                },
+                "createdDate": {
+                    "type": "integer"
+                },
+                "permissions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Permission"
+                    }
+                },
+                "policyKey": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.APSToken": {
             "description": "APSトークンレスポンス",
             "type": "object",
@@ -62,6 +112,17 @@
                 "token_type": {
                     "type": "string",
                     "example": "Bearer"
+                }
+            }
+        },
+        "domain.Permission": {
+            "type": "object",
+            "properties": {
+                "access": {
+                    "type": "string"
+                },
+                "authId": {
+                    "type": "string"
                 }
             }
         }
