# backend/internal/infrastructure/aps/aps_bucket/aps_bucket.go
@@ -1,0 +1,15 @@
+package aps_bucket
+
+import (
+    "net/http"
+)
+
+type APSBucketRepository struct {
+    client *http.Client
+}
+
+func NewAPSBucketRepository() *APSBucketRepository {
+    return &APSBucketRepository{
+        client: &http.Client{},
+    }
+}
