# backend/internal/interface/router/main.go
@@ -2,25 +2,32 @@ package router
 
 import (
     "github.com/gorilla/mux"
-    "github.com/maixhashi/nextgo-aps-viewer/backend/internal/infrastructure/aps"
-    "github.com/maixhashi/nextgo-aps-viewer/backend/internal/interface/handler"
-    "github.com/maixhashi/nextgo-aps-viewer/backend/internal/usecase"
+    aps_token_repo "github.com/maixhashi/nextgo-aps-viewer/backend/internal/infrastructure/aps/aps_token"
+    aps_bucket_repo "github.com/maixhashi/nextgo-aps-viewer/backend/internal/infrastructure/aps/aps_bucket"
+    "github.com/maixhashi/nextgo-aps-viewer/backend/internal/interface/handler/aps_token"
+    "github.com/maixhashi/nextgo-aps-viewer/backend/internal/interface/handler/aps_bucket"
+    token_usecase "github.com/maixhashi/nextgo-aps-viewer/backend/internal/usecase/aps_token"
+    bucket_usecase "github.com/maixhashi/nextgo-aps-viewer/backend/internal/usecase/aps_bucket"
 )
 
 func NewRouter() *mux.Router {
     r := mux.NewRouter()
     
-    // リポジトリの初期化
-    apsTokenRepo := aps.NewAPSTokenRepository()
+    // Initialize repositories
+    apsTokenRepo := aps_token_repo.NewAPSTokenRepository()
+    apsBucketRepo := aps_bucket_repo.NewAPSBucketRepository()
     
-    // ユースケースの初期化
-    apsTokenUseCase := usecase.NewAPSTokenUseCase(apsTokenRepo)
+    // Initialize use cases
+    apsTokenUseCase := token_usecase.NewAPSTokenUseCase(apsTokenRepo)
+    apsBucketUseCase := bucket_usecase.NewAPSBucketUseCase(apsBucketRepo, apsTokenUseCase)
     
-    // ハンドラーの初期化
-    apsTokenHandler := handler.NewAPSTokenHandler(apsTokenUseCase)
+    // Initialize handlers
+    apsTokenHandler := aps_token.NewAPSTokenHandler(apsTokenUseCase)
+    apsBucketHandler := aps_bucket.NewAPSBucketHandler(apsBucketUseCase)
     
-    // ルートの登録
+    // Register routes
     RegisterAPSTokenRoutes(r, apsTokenHandler)
+    RegisterAPSBucketRoutes(r, apsBucketHandler)
     
     return r
 }
